--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "5.2.1",
+    "bulma": "^0.9.1",
     "stimulus": "^1.1.1"
   },
   "devDependencies": {
